--- a/Resources/Private/Templates/Be/Translator/ExportTableRowIndex.html
+++ b/Resources/Private/Templates/Be/Translator/ExportTableRowIndex.html
@@ -10,6 +10,42 @@
 </f:section>
 
 <f:section name="content">
-    <h1><f:translate key="exportTableRow.headlineExport" />: {label}</h1>
+    <div class="hd-translator">
+        <h1><f:translate key="exportTableRow.headlineExport" />: {label}</h1>
+        <f:if condition="{fields}">
+            <f:else>
+                <h2><f:translate key="exportTableRow.nothingToExport" /></h2>
+                <p><f:translate key="exportTableRow.nothingToExport.checkYourTcaSettings" /></p>
+            </f:else>
+            <f:then>
+                <div>
+                    <f:form action="exportTableRowExport" arguments="{tablename: tablename, rowUid: rowUid}">
+                        <div>
+                            <label>TODO: target language</label>
+                            <f:form.select>
+                                
+                            </f:form.select>
+                        </div>
+                        <div>
+                            <button>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12"></path>
+                                </svg>
+                                TOOD EXPORT XLF
+                            </button>
+                        </div>
+                    </f:form>
+                </div>
+                <div class="hd-translator-databaseexport-preview">
+                    <f:for each="{fields}" as="value" key="key">
+                        <div class="hd-translator-databaseexport-preview-row">
+                            <div class="hd-translator-databaseexport-preview-row-key">{key}</div>
+                            <div class="hd-translator-databaseexport-preview-row-value">{value}</div>
+                        </div>
+                    </f:for>
+                </div>
+            </f:then>
+        </f:if>
+    </div>
 </f:section>
 </html>
