Integration of INLINE tca type for export

--- a/Resources/Private/Templates/Be/Translator/ExportTableRowIndex.html
+++ b/Resources/Private/Templates/Be/Translator/ExportTableRowIndex.html
@@ -42,7 +42,7 @@
                     <f:for each="{fields}" as="value" key="key">
                         <div class="hd-translator-databaseexport-preview-row">
                             <div class="hd-translator-databaseexport-preview-row-key">{key}</div>
-                            <div class="hd-translator-databaseexport-preview-row-value">{value}</div>
+                            <div class="hd-translator-databaseexport-preview-row-value">{value.value}</div>
                         </div>
                     </f:for>
                 </div>
