show labels in the preview

--- a/Resources/Private/Templates/Be/Translator/ExportTableRowIndex.html
+++ b/Resources/Private/Templates/Be/Translator/ExportTableRowIndex.html
@@ -41,7 +41,7 @@
                 <div class="hd-translator-databaseexport-preview">
                     <f:for each="{fields}" as="value" key="key">
                         <div class="hd-translator-databaseexport-preview-row">
-                            <div class="hd-translator-databaseexport-preview-row-key">{key}</div>
+                            <div class="hd-translator-databaseexport-preview-row-key">{value.label}</div>
                             <div class="hd-translator-databaseexport-preview-row-value">{value.value}</div>
                         </div>
                     </f:for>
