integration of manual settings of target language

--- a/Resources/Private/Templates/Be/Translator/DatabaseImportIndex.html
+++ b/Resources/Private/Templates/Be/Translator/DatabaseImportIndex.html
@@ -5,6 +5,9 @@
         <div>
             <f:form.upload name="files" multiple="1" additionalAttributes="{accept: '.xlf, .zip'}" />
         </div>
+				<div>
+					Lanugage UID: <f:form.textfield name="targetLanguageUid" value="1" />
+				</div>
         <f:form.submit value="Import" />
     </f:form>
 
