--- a/Resources/Private/Templates/Be/Translator/PageContentExport.html
+++ b/Resources/Private/Templates/Be/Translator/PageContentExport.html
@@ -4,13 +4,17 @@
         <f:form action="pageContentExportProccess">
             <div>
                 <div>
-                    <label>Target language</label>
-                    <f:form.select name="language">
-                        <f:for each="{languages}" as="language" key="key">
-                            <f:form.select.option value="{key}">{language}</f:form.select.option>
-                        </f:for>
-                    </f:form.select>
+                    <label>Source language UID</label>
+									<f:form.textfield id="source" name="source" value="0" required="1" />
                 </div>
+							<div>
+								<label>Target language</label>
+								<f:form.select name="language">
+									<f:for each="{languages}" as="language" key="key">
+										<f:form.select.option value="{key}">{language}</f:form.select.option>
+									</f:for>
+								</f:form.select>
+							</div>
             </div>
             <div>
                 <div>
