--- a/Resources/Private/Templates/Be/Translator/ExportTableRowIndex.html
+++ b/Resources/Private/Templates/Be/Translator/ExportTableRowIndex.html
@@ -47,7 +47,7 @@
                         <div class="hd-translator-databaseexport-preview-row">
                             <div class="hd-translator-databaseexport-preview-row-key">{value.label}</div>
                             <div class="hd-translator-databaseexport-preview-row-value">{value.value}</div>
-                            <div class="hd-translator-databaseexport-preview-row-tablename">{value.table}:{value.uid}:{value.field}</div>
+                            <div class="hd-translator-databaseexport-preview-row-tablename">{key}</div>
                         </div>
                     </f:for>
                 </div>
